# JWT-estudies

./: README.md  pyproject.toml
app/: app.py  auth_user.py  routes.py  schemas.py
app/db/: connection.py  depends.py  models.py
migrations/: env.py
migrations/versions/: 1a674b4bce9b_add_user_table.py  4b3b71a427a6_add_user_table.py
